@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  - Make ::OnColumnChange always allow mutating values before update
  - Fix documented args for `after_column_change`
+ - Document ::OnColumnChange semantics a little bit more clearly
 
 2.025002  2015-03-21 00:03:43-05:00 America/Chicago
  - Migrate ::RS::CorelateRelationship to an importable Util
